--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
 	"description": "An online shopping application for Zubis Mart",
 	"main": "server.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "node server.js"
+	},
+	"engines": {
+		"node" :"^8.12.0",
+		"npm": "^6.4.1"
 	},
 	"keywords": [
 		"NodeJS",
