--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 		"express-validator": "^5.3.0",
 		"moment": "^2.22.2",
 		"mongoose": "^5.3.5",
+		"mongoose-gridfs": "^0.5.0",
+		"multer": "^1.4.1",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0"
 	}
