--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
 		"express-messages": "^1.0.1",
 		"express-session": "^1.15.6",
 		"express-validator": "^5.3.0",
+		"gridfs-stream": "^1.1.1",
 		"moment": "^2.22.2",
-		"mongoose": "^5.3.5",
+		"mongoose": "^5.3.11",
 		"mongoose-gridfs": "^0.5.0",
 		"multer": "^1.4.1",
+		"multer-gridfs-storage": "^3.2.3",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0"
 	}
