--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"moment": "^2.22.2",
 		"mongoose": "^5.3.13",
 		"multer": "^1.4.1",
+		"numeral": "^2.0.6",
 		"openssl": "^1.1.0",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0"
